Bug#18012 mysqlslap fails if querystring starts with delimiter - Terminate loop not only when the limit is met, but alse when there is no more stmts

client/mysqlslap.c:
  Terminate loop not only when the limit is met, but alse when there is no more stmts
mysql-test/r/mysqlslap.result:
  Remove the extra statmemnt